# mwc-wallet

./: .api_secret  .gitignore  Cargo.toml  README.md  azure-pipelines.yml  build_static.sh  build_static32.bat  build_static64.bat  build_static_linux.sh  file
.ci/: install.yml  pushdocs.yml  release.yml  test.yml  win32_cargo.bat  win64_cargo.bat  windows-release.yml
api/: Cargo.toml  doc.out
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs  owner_rpc_s.rs  owner_rpc_v2.rs  owner_rpc_v3.rs  types.rs
api/tests/slates/: v1_req.slate  v1_res.slate
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  executor.rs  lib.rs
controller/tests/: accounts.rs  check.rs  file.rs  invoice.rs  late_lock.rs  no_change.rs  payment_proofs.rs  repost.rs  restore.rs  self_send.rs  slatepack.rs  transaction.rs  ttl_cutoff.rs  updater_thread.rs
controller/tests/common/: mod.rs
doc/: atomic_swaps.md  change_outputs.md  installing_openssl.md  setup.md  setup_other_currency_nodes.md  slatepack_data_format.md  tls-setup.md  tor_for_exchanges_pools.md
doc/samples/v3_api_node/: package-lock.json
doc/swap/: electrumx_install.md
impls/: Cargo.toml
impls/src/: error.rs  lib.rs  seed.rs
impls/src/adapters/: file.rs  http.rs  keybase.rs  mod.rs  mwcmq.rs  types.rs
impls/src/backends/: lmdb.rs
impls/src/client_utils/: client.rs  json_rpc.rs  socksv5.rs
impls/src/encrypt/: poly1305.rs
impls/src/lifecycle/: default.rs  mod.rs  seed.rs
impls/src/node_clients/: http.rs  mod.rs
impls/src/swap/: dealer.rs  message.rs  mod.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: config.rs  process.rs
integration/: Cargo.toml
integration/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs
libwallet/: Cargo.toml
libwallet/src/: address.rs  api_impl.rs  error.rs  lib.rs  slate.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_swap.rs  owner_updater.rs  types.rs
libwallet/src/encrypt/: c.rs  chacha.rs  constant_time.rs  init.rs  mod.rs  polyfill.rs
libwallet/src/encrypt/aead/: chacha20_poly1305.rs  mod.rs
libwallet/src/internal/: keys.rs  restore.rs  scan.rs  selection.rs  tx.rs  updater.rs
libwallet/src/proof/: base58.rs  crypto.rs  hasher.rs  message.rs  mod.rs  proofaddress.rs  tx_proof.rs
libwallet/src/slate_versions/: mod.rs  ser.rs  v2.rs  v3.rs
libwallet/src/slatepack/: armor.rs  mod.rs  packer.rs  slatepack.rs
libwallet/src/swap/: api.rs  buyer.rs  defaults.rs  error.rs  message.rs  mod.rs  seller.rs  ser.rs  swap.rs  trades.rs  types.rs
libwallet/src/swap/bitcoin/: api.rs  client.rs  electrum.rs  rpc.rs  types.rs
libwallet/src/swap/fsm/: buyer_swap.rs  machine.rs  mod.rs  seller_swap.rs  state.rs
libwallet/src/swap/multisig/: error.rs  types.rs
libwallet/swap_test/: context_buy.json  context_sell.json  message_1.json  message_2.json  message_3.json  swap_buy_1.json  swap_buy_2.json  swap_buy_3.json  swap_sell_1.json  swap_sell_2.json  swap_sell_3.json  swap_sell_4.json  swap_sell_5.json  swap_sell_6.json
libwallet/tests/: libwallet.rs
libwallet/tests/slates/: v2.slate
mwcmqs/: Cargo.toml
mwcmqs/src/: backend.rs  base58.rs  crypto.rs  error_kind.rs  hasher.rs  lib.rs  message.rs  mod.rs  mwcmq.rs  tx_proof.rs  types.rs
mwcmqs/src/encrypt/: error.rs
mwcmqs/src/encrypt/aead/: mod.rs
src/: lib.rs
src/cli/: cli.rs
src/cmd/: wallet.rs  wallet_args.rs
swap/: Cargo.toml
swap/src/: lib.rs
swap/src/swap/: api.rs  buyer.rs  error.rs  message.rs  mod.rs  seller.rs  ser.rs  swap.rs  types.rs
swap/src/swap/bitcoin/: api.rs  client.rs  electrum.rs  types.rs
swap/src/swap/multisig/: error.rs  mod.rs  types.rs
swap/test/: message_3.json  swap_buy_1.json  swap_buy_2.json  swap_buy_3.json  swap_sell_1.json  swap_sell_2.json  swap_sell_3.json  swap_sell_4.json  swap_sell_5.json  swap_sell_6.json
tests/: cmd_line_basic.rs  owner_v2_sanity.rs  owner_v3_init_secure.rs  owner_v3_lifecycle.rs  tor_dev_helper.rs
tests/common/: mod.rs
tests/data/v2_reqs/: init_send_tx.req.json
tests/data/v3_reqs/: create_config.req.json
util/: Cargo.toml
util/src/: lib.rs  ov3.rs
