[package]
name = "grin_wallet_config"
version = "3.1.7"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
ring = "0.14"
failure = "0.1"
parking_lot = {version = "0.6"}
hmac = "0.6"
digest = "0.7"
ripemd160 = "0.7"
failure_derive = "0.1"
regex = "1"
dirs = "1"
colored = "1.6"
toml = "0.4"
reqwest = "0.9.22"
nanoid = "0.1.3"
sha2 = "0.7"
serde_derive = "1"

grin_wallet_util = { path = "../util", version = "3.1.7" }

[dev-dependencies]
pretty_assertions = "0.5.1"
