[package]
name = "grin_wallet_impls"
version = "3.2.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
failure = "0.1"
failure_derive = "0.1"
futures = "0.3"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
crossbeam-utils = "0.7"
url = "1.7"
lazy_static = "1"

nanoid = "0.1.3"
reqwest = "0.9.22"

#http client (copied from grin)
http = "0.1.5"
hyper-rustls = "0.19"
hyper-timeout = "0.3"

#Socks/Tor
byteorder = "1"
hyper = "0.13"
hyper-socks2 = "0.4"
ed25519-dalek = "1.0.0-pre.1"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.9"

grin_wallet_util = { path = "../util", version = "3.2.0" }
grin_wallet_config = { path = "../config", version = "3.2.0" }
grin_wallet_libwallet = { path = "../libwallet", version = "3.2.0" }


# Release
#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4"  }

# For bleeding edge
grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master"  }

# For local testing
#grin_p2p = { path = "../../mwc-node/p2p", version= "3.1.3"}
#grin_core = { path = "../../mwc-node/core", version= "3.1.3"}
#grin_api = { path = "../../mwc-node/api", version= "3.1.3"}
#grin_util = { path = "../../mwc-node/util", version= "3.1.3"}

