[package]
name = "grin_wallet_libwallet"
version = "3.2.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
failure = "0.1"
failure_derive = "0.1"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.4", features = ["serde"] }
lazy_static = "1"
strum = "0.15"
strum_macros = "0.15"
ed25519-dalek = "1.0.0-pre.1"
byteorder = "1"
data-encoding = "2"
ring = "0.16"
regex = "1.3"
sha2 = "0.7"
sha3 = "0.8"
digest = "0.7"
hmac = "0.6"
ripemd160 = "0.7"

grin_wallet_util = { path = "../util", version = "3.2.0" }
grin_wallet_config = { path = "../config", version = "3.2.0" }

# Release
#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_core= { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }

# For bleeding edge
grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_core= { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master"  }


# For local testing
#grin_api = { path = "../../mwc-node/api", version= "3.1.3"}
#grin_p2p = { path = "../../mwc-node/p2p", version= "3.1.3"}
#grin_core= { path = "../../mwc-node/core", version= "3.1.3"}
#grin_keychain = { path = "../../mwc-node/keychain", version= "3.1.3"}
#grin_util = { path = "../../mwc-node/util", version= "3.1.3"}


[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
libc = { version = "0.2.69", default-features = false }
