[package]
name = "grinswap"
version = "3.2.1"
authors = ["vault713 <hello@713.mw>"]
description = "Grin cross-chain atomic swaps"
keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency", "atomic swap", "scriptless scripts" ]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
bitcoin = { version = "0.19", git = "https://github.com/mwcproject/rust-bitcoin", branch = "zkp", features = ["bitcoinconsensus"] }
bitcoin_hashes = { version = "0.7", features = ["serde"] }
blake2-rfc = "0.2"
byteorder = "1.3"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
failure_derive = "0.1"
hex = "0.3"
lazy_static = "1.4"
parking_lot = "0.6"
rand = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
sha2 = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }

grin_wallet_libwallet = { path = "../libwallet", version = "3.2.1" }

# for release
#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }

# For bleeding edge
grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }


# For local testing
#grin_core = { path = "../mwc-node/core", version= "3.2.1"}
#grin_keychain = { path = "../mwc-node/keychain", version= "3.2.1"}
#grin_util = { path = "../mwc-node/util", version= "3.2.1"}
#grin_store = { path = "../mwc-node/store", version= "3.2.1"}
#grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.1.8-beta.1" }

[patch.crates-io]
grin_secp256k1zkp = { git = "https://github.com/mwcproject/rust-secp256k1-zkp", branch = "master" }
