[package]
name = "grin_wallet_util"
version = "2.4.3-beta.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }

# For beta release
# grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }

# For bleeding edge
grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }

# For local testing
#grin_core = { path = "../../mwc-node/core", version= "2.4.2-beta.1"}
#grin_keychain = { path = "../../mwc-node/keychain", version= "2.4.2-beta.1"}
#grin_chain = { path = "../../mwc-node/chain", version= "2.4.2-beta.1"}
#grin_util = { path = "../../mwc-node/util", version= "2.4.2-beta.1"}
#grin_api = { path = "../../mwc-node/api", version= "2.4.2-beta.1"}
#grin_store = { path = "../../mwc-node/store", version= "2.4.2-beta.1"}
#grin_p2p = { path = "../../mwc-node/p2p", version= "2.4.2-beta.1" }

[dependencies.grin_secp256k1zkp]
git = "https://github.com/mwcproject/rust-secp256k1-zkp"
#tag = "grin_integration_28"
#path = "../../rust-secp256k1-zkp"
version = "0.7.7"
features = ["bullet-proof-sizing"]

[dev-dependencies]
pretty_assertions = "0.5.1"

