[package]
name = "grin_wallet_util"
version = "3.1.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.0" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.0" }
#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.0" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.0" }
#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.0" }
#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.0" }

# For beta release
# grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }

# For bleeding edge
grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }

# For local testing
grin_core = { path = "../../mwc-node/core", version= "3.1.0"}
grin_keychain = { path = "../../mwc-node/keychain", version= "3.1.0"}
grin_chain = { path = "../../mwc-node/chain", version= "3.1.0"}
grin_util = { path = "../../mwc-node/util", version= "3.1.0"}
grin_api = { path = "../../mwc-node/api", version= "3.1.0"}
grin_store = { path = "../../mwc-node/store", version= "3.1.0"}

[dev-dependencies]
pretty_assertions = "0.5.1"
