[package]
name = "grin_wallet_util"
version = "3.2.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
ed25519-dalek = "1.0.0-pre.1"
data-encoding = "2"
sha3 = "0.8"
failure = "0.1"
failure_derive = "0.1"

# For Release
#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }
#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.1.4" }

# For beta release
# grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }
# grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "2.4.0" }

# For bleeding edge
grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }

# For local testing
#grin_core = { path = "../../mwc-node/core"}
#grin_keychain = { path = "../../mwc-node/keychain"}
#grin_chain = { path = "../../mwc-node/chain"}
#grin_util = { path = "../../mwc-node/util"}
#grin_api = { path = "../../mwc-node/api"}
#grin_store = { path = "../../mwc-node/store"}

[dev-dependencies]
pretty_assertions = "0.5.1"
